Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -333,15 +333,13 @@ Combines genetic material from two parents to create offspring.
 
 ## 7. Selection
 
-### 7.1 Generic Evolutionary Algorithm
+#### Revisit Generic Evolutionary Algorithm
 
 ```
 X0 := generate initial population of solutions
 terminationflag := false
 t := 0
-
 Evaluate the fitness of each individual in X0.
-
 while (terminationflag != true):
     Selection: Choose parents based on fitness.
     Variation: Apply mutation and crossover.
@@ -353,18 +351,17 @@ while (terminationflag != true):
 Output best solution found
 ```
 
-### 7.2 Selection Process
+### 7.1 Selection Process
 - **Not a search operator** but heavily influences search performance.
 - **Precedes variation operators**: selects individuals for breeding.
 - **Key Idea:**
   - Favors better solutions (higher fitness values).
   - Still allows selection of weaker solutions to maintain diversity.
+    - **Why Select Inferior Solutions?**
+      - Prevents premature convergence.
+      - Avoids getting stuck in local optima.
 
-#### **Why Select Inferior Solutions?**
-- Prevents premature convergence.
-- Avoids getting stuck in local optima.
-
-### 7.3 Selection Schemes
+### 7.2 Selection Schemes
 1. **Fitness Proportional Selection (Roulette Wheel Selection)**
 2. **Ranking Selection**
 3. **Truncation Selection**
@@ -373,12 +370,9 @@ Output best solution found
 
 ---
 
-### 7.4 Fitness Proportional Selection
-- **Definition:** Each individual is selected with probability:
-  \[
-p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
-  \]
-  where \( f_i \) is the fitness value of individual \( i \) and \( M \) is the population size.
+### 7.3 (1)- Fitness Proportional Selection
+- **Definition:** Each individual is selected with probability: $p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}$
+  where $f_i$ is the fitness value of individual $i$ and $M$ is the population size.
 - **Key Properties:**
   - Higher fitness → Higher probability of selection.
   - Allows weaker individuals to be chosen occasionally.
@@ -386,60 +380,57 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 #### **Scaling in Fitness Proportional Selection**
 - **Problem:**
   - Early generations: "Super individuals" dominate → Premature convergence.
+    - Crossover is not effective anymore since the parents are the same; hence, there is no exploration.
   - Later generations: Little fitness difference → Slow convergence.
-- **Solution:** Apply **linear scaling**:
-  \[
-  f'_i = a + b f_i
-  \]
-  - Typically, \( a = \max(f) \), \( b = \frac{\min(f)}{M} < 1 \).
+- **Solution:** Apply **linear scaling**: $f'_i = a + b f_i$
+  - Typically, $a = \max(f)$, $b = \frac{\min(f)}{M} < 1$.
 
 ---
 
-### 7.5 Ranking Selection
+### 7.4 (2)- Ranking Selection
+<img src="../../images/Ranking.png" alt="Ranking">
+
 - Sort population from best to worst based on fitness.
-- Selection probability \( p(γ) \) is assigned based on rank \( γ \):
-  - **Linear Ranking:**
-    \[
-    p(γ) = \frac{α + (β - α)γ}{M - 1}
-    \]
+- Selection probability $p(γ)$ is assigned based on rank $γ$:
+  - **Linear Ranking:** $p(γ) = \frac{α + (β - α)γ}{M - 1}$
   - **Other Methods:** Exponential, Power, Geometric ranking.
 
 ---
 
-### 7.6 Truncation Selection
+### 7.5 (3)- Truncation Selection
 - **Steps:**
   1. Rank individuals by fitness.
-  2. Select top \( k \)% for reproduction (e.g., top 50% or 30%).
+  2. Select top $k$% for reproduction (e.g., top 50% or 30%).
 - **Characteristics:**
   - Deterministic selection (no randomness involved).
   - Commonly used in **Evolution Strategies (ES)**.
 
 ---
 
-### 7.7 Tournament Selection
+### 7.6 (4)- Tournament Selection
 - **Steps:**
-  1. Randomly select \( k \) individuals from population.
+  1. Randomly select $k$ individuals from population.
   2. Choose the fittest individual from the subset.
   3. Repeat until enough offspring are selected.
 - **Common Variants:**
-  - **Binary Tournament (\( k=2 \))** is the most popular.
-  - Higher \( k \) → Higher selection pressure.
+  - **Binary Tournament ( $k=2$ )** is the most popular.
+  - Higher $k$ → Higher selection pressure.
 
 ---
 
-### 7.7 (μ+λ) and (μ,λ) Selection
+### 7.7 (5)- (μ+λ) and (μ,λ) Selection
 - Used in **Evolution Strategies**.
 
 #### **(μ+λ) Selection:**
-- Parent population size: \( μ \).
-- Generate \( λ \) offspring.
-- Next population: Select top \( μ \) from **both** parents and offspring.
+- Parent population size: $μ$.
+- Generate $λ$ offspring.
+- Next population: Select top $μ$ from **both** parents and offspring.
 
 #### **(μ,λ) Selection:**
-- Parent population size: \( μ \).
-- Generate \( λ \) offspring.
-- Next population: Select top \( μ \) from **only** offspring.
-- Requires \( λ > μ \) to maintain diversity.
+- Parent population size: $μ$.
+- Generate $λ$ offspring.
+- Next population: Select top $μ$ from **only** offspring.
+- Requires $λ > μ$ to maintain diversity.
 
 ---
 
@@ -450,17 +441,9 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 - **High selection pressure:** Faster convergence, but risks premature convergence.
 - **Low selection pressure:** Slow convergence, but better exploration.
 
-#### **Measurement: Take-over Time (\( τ^* \))**
+#### **Measurement: Take-over Time ($τ^*$)**
 - Time required for the entire population to be taken over by the best individual.
 - **Longer \( τ^* \) → Lower selection pressure.**
-
-| Selection Method | Take-over Time (\( τ^* \)) |
-|-----------------|----------------------|
-| Fitness Prop. Selection | \( M \ln M / c \) |
-| Linear Ranking | \( 2 \ln (M-1) / (β-1) \) |
-| Truncation | \( \ln M \) |
-| Tournament (size \( k \)) | \( \ln M / \ln k \) |
-| (μ+λ) Selection | \( \ln λ / \ln(λ/μ) \) |
 
 ---
 
@@ -471,5 +454,5 @@ p_i = \frac{f_i}{\sum_{j=1}^{M} f_j}
 - **Types:**
   - **Generational Replacement:** Entire population is replaced.
   - **Steady-State Replacement:** Only a few individuals are replaced at a time.
-  - **Elitism:** Top \( N \) individuals always survive to the next generation.
+  - **Elitism:** Top $N$ individuals always survive to the next generation.
   - **Generational Gap:** Percentage of individuals carried over without modification.
