Update 05. Multi Objective Optimisation.md

--- a/notes/Evolutionary-computation/05. Multi Objective Optimisation.md
+++ b/notes/Evolutionary-computation/05. Multi Objective Optimisation.md
@@ -148,8 +148,10 @@ To identify the Pareto-optimal (non-dominated) set from a given population $P$, 
 3. **Complexity:**  
    This procedure has a computational complexity of $O(MN^2)$ (with $M$ objectives and $N$ solutions).
 
+---
 
 ### 4.4 Non-Dominated Sorting Algorithms
+<img src="../../images/non-dominated-fronts.png" alt="non-dominated-fronts" width="400">  
 
 A common approach in MOEAs is to classify the population into multiple non-dominated fronts:
 1. **First Front:**  
@@ -169,7 +171,7 @@ A common approach in MOEAs is to classify the population into multiple non-domin
 ## 5. Elitisim
 **Elitism** in evolutionary algorithms is the strategy of ensuring that the best solutions found in a generation are carried over unchanged to the next generation. This helps preserve high-quality solutions and accelerates convergence toward optimal results.
 
-### 5.1 Shortcomings of Non-Elitist MOEAs
+### 5.1 Disadvantages of Non-Elitist MOEAs
 Non-elitist multi-objective evolutionary algorithms (MOEAs) suffer from the absence of **elite preservation**. In single-objective evolutionary algorithms (SOEAs), maintaining elite individuals is critical for convergence, and the same holds true for MOEAs.
 
 **Key Points:**
@@ -193,54 +195,115 @@ Elitist MOEAs address the shortcomings of non-elitist methods by incorporating m
 
 ---
 
-### 5.3 Elitist Non-dominated Sorting Genetic Algorithm (NSGA-II)
+## 6. Elitist Non-dominated Sorting Genetic Algorithm (NSGA-II)
+<img src="https://www.mdpi.com/machines/machines-09-00156/article_deploy/html/images/machines-09-00156-g001.png" alt="NSGA-II" width="400">
 
 NSGA-II is a widely used elitist MOEA that effectively balances convergence and diversity.
 
-#### Non-Dominated Sorting
+### 6.1 NSGA-II Algorithm
 
-For each solution in the population, NSGA-II computes:
-- **\( n_i \):** The number of solutions that dominate solution \( i \).
-- **\( S_i \):** The set of solutions that are dominated by solution \( i \).
+```pseudo
+NSGA-II (One Generation) Algorithm
 
-The process ranks solutions into different Pareto fronts:
-- Solutions with \( n_i = 0 \) (not dominated by any other) form the first Pareto front.
-- Subsequent fronts are determined by removing the current front and repeating the process.
-
-> **Example:**  
-> With five solutions, if solution A is not dominated by any others (\( n_A = 0 \)), it is placed in the first front. Solutions dominated by A but not by each other might fall into the second front.
-
-**Complexity:**  
-The sorting typically operates with a complexity of \( O(MN^2) \) (with \( M \) objectives and \( N \) solutions).
-
-### Elite Preservation and Crowding Distance
+Require: A parent population Pₜ of size N
+Require: An offspring population Qₜ of size N
+1: Sort Rₜ := Pₜ ∪ Qₜ into non-dominated fronts F₁, F₂, ...  //Non-Dominated Sorting algorithm
+2: Set i := 1 and Pₜ₊₁ := ∅.
+3: while |Pₜ₊₁| + |Fᵢ| < N do  //Building the new population by adding the non-dominated solutions front by front
+4:     Set Pₜ₊₁ = Pₜ₊₁ ∪ Fᵢ
+5:     Set i := i + 1
+6: end while
+7: Perform “crowding sort” on the individuals in front Fᵢ  //Since Pₜ₊₁ is now full we consider diverse new solutions only
+8: Add the N − |Pₜ₊₁| most widely spread solutions (based on crowding distance) to Pₜ₊₁  //Crowding distance algorithm 
+9: Create an offspring population Qₜ₊₁ from Pₜ₊₁ using crowded tournament selection, crossover, and mutation operators.
+10: Return Pₜ₊₁ and Qₜ₊₁
+```
 
 - **Elite Preservation:**  
   NSGA-II retains high-quality solutions by merging the parent and offspring populations and then selecting the best individuals.
 
-- **Crowding Distance:**  
-  This metric measures the density of solutions surrounding a given solution. When solutions have the same rank, those in less crowded areas are preferred, ensuring diversity across the Pareto front.
+---
 
-> **Real-World Analogy:**  
-> Think of crowding distance like ensuring that in a job interview, candidates are not only selected for their qualifications but also for representing diverse skills and experiences.
+### 6.2 Non-Dominated Sorting
+<img src="https://media.springernature.com/lw1200/springer-static/image/art%3A10.1007%2Fs42979-022-01303-w/MediaObjects/42979_2022_1303_Fig1_HTML.png" alt="Non-Dominated Sorting" width="400">
+
+Classifies the population into multiple non-dominated fronts
+
+```pseudo
+Non-Dominated Sorting Algorithm
+
+Require: A population of individuals P
+for each individual i ∈ P do
+    Set S_i := ∅ and n_i := 0  //S_i is a set , n_i is a number
+end for
+for all pairs i, j ∈ P, i ≠ j do  //All different pairs
+    if j dominates i then
+        S_j := S_j ∪ {i}  //Add i to the set of J (The set of solutions that are dominated by j)
+    else if i dominates j then
+        n_j := n_j + 1  //Increment n_j (The number of solutions that dominate j)
+    end if
+end for
+for each i ∈ P do
+    If n_i = 0, keep i in the first non-dominated front P₁  //If no solution dominates i
+end for
+Set k = 1
+while Pₖ ≠ ∅ do
+    for each i ∈ Pₖ and j ∈ Sᵢ do
+        Set nⱼ := nⱼ − 1
+        if nⱼ = 0 then
+            Update Q := Q ∪ {j}  // j is going to be in the next front
+        end if
+    end for
+    Set k = k + 1 and Pₖ = Q and update Q := ∅.
+end while
+```
+
+For each solution in the population, NSGA-II computes:
+- **$n_i$ :** The number of solutions that dominate solution $i$ .
+- **$S_i$ :** The set of solutions that are dominated by solution $i$ .
+
+The process ranks solutions into different Pareto fronts:
+- Solutions with $n_i = 0$ (not dominated by any other) form the first Pareto front.
+- Subsequent fronts are determined by removing the current front and repeating the process.
+
+> **Example:**  
+> With five solutions, if solution A is not dominated by any others ( $n_A = 0 $ ), it is placed in the first front. Solutions dominated by A but not by each other might fall into the second front.
+
+**Complexity:**  
+The sorting typically operates with a complexity of $O(MN^2)$ (with $M$ objectives and $N$ solutions).
+
+---
+
+### 6.3 Crowding Distance
+<img src="https://www.mdpi.com/applsci/applsci-13-04643/article_deploy/html/images/applsci-13-04643-g007.png" alt="Crowding Distance" width="400">
+
+This metric measures the density of solutions surrounding a given solution. When solutions have the same rank, those in less crowded areas are preferred, ensuring diversity across the Pareto front.
+
+```pseudo
+Crowding Distance Algorithm
+Require: A set F = { (fᵢ₁, ..., fᵢₙ) } for i ∈ [n] of objective vectors
+for each i ∈ [n] do
+    Set dᵢ := 0   // initialize distances to 0
+end for
+for each objective m ∈ [M] do
+    Sort the set F according to objective fₘ such that:
+    f(Im₁)ₘ ≤ f(Im₂)ₘ ≤ ... ≤ f(Imₙ)ₘ
+    Set d₍Im₁₎ := ∞ and d₍Imₙ₎ := ∞  // boundary points (The points with the smallest and largest objectives)
+    for j ∈ {2, ..., n−1} do
+        d₍Ij₎ := d₍Ij₎ + (f(Im₍j+1₎)ₘ − f(Im₍j−1₎)ₘ) / (fₘ_max − fₘ_min)
+    end for
+end for
+return the “crowding distances” (d₁, ..., dₙ)
+```
+
+> Crowding Distance of the individual tells us how diverse that individual is, and the larger it is the more diverse it is.
 
 **Overall Complexity:**  
-While the non-dominated sorting is \( O(MN^2) \), the crowding distance computation is \( O(MN \log N) \).
+While the non-dominated sorting is $O(MN^2)$ , the crowding distance computation is $O(MN \log N)$ .
 
 ---
 
-## 15. NSGA-II Simulation Results
-
-Simulation studies of NSGA-II (often using a binary-coded representation) typically demonstrate:
-- **Convergence:** A clear trend towards the true Pareto front.
-- **Diversity:** A well-distributed set of solutions covering various trade-offs.
-
-> **Observation:**  
-> Graphs from simulation results usually show clusters of solutions along the Pareto front, confirming that NSGA-II successfully preserves elite individuals while maintaining diversity.
-
----
-
-## 16. Strength Pareto EA (SPEA)
+## 7. Strength Pareto EA (SPEA)  //Look at later
 
 SPEA is an elitist MOEA that uses an external archive to store non-dominated solutions.
 
@@ -258,12 +321,9 @@ SPEA is an elitist MOEA that uses an external archive to store non-dominated sol
 - **Clustering for Diversity:**  
   When the archive exceeds a set limit, clustering techniques help maintain a diverse set of solutions.
 
-> **Practical Example:**  
-> In an automotive design problem, SPEA helps in retaining a diverse set of designs that balance factors like cost, performance, and safety, even if some designs slightly underperform in one objective.
-
 ---
 
-## 17. Pareto Archived ES (PAES)
+## 8. Pareto Archived ES (PAES)  //Look at later
 
 PAES is a simpler approach based on a (1+1)-evolution strategy (ES) with an external archive.
 
@@ -285,78 +345,32 @@ PAES is a simpler approach based on a (1+1)-evolution strategy (ES) with an exte
 
 ---
 
-## 18. Niching in PAES
+### 8.1 Niching in PAES
 
 **Niching Techniques** in PAES help in preserving a diverse set of solutions by:
 - Dividing the objective space into hypercubes.
 - Ensuring that solutions are maintained from each niche (or hypercube).
 
-> **Analogy:**  
-> Imagine a classroom where students are grouped into diverse teams to cover all aspects of a project. Niching ensures that no single team (or solution cluster) dominates the overall outcome.
-
 ---
 
-## 19. Handling Constraints in MOEAs
-
+## 9. Handling Constraints in MOEAs
 Many real-world problems have constraints that can render some solutions infeasible. Handling these constraints is crucial for the success of MOEAs.
 
 ### Methods to Handle Constraints:
+We previously looked at constraints handling using the Penalty Function Approach
 
-- **Penalty Function Approach:**  
-  Modify each objective by adding a penalty term to account for constraint violations:
-  \[
-  F_m = f_m + R_m \cdot \Omega(\tilde{g})
-  \]
-  Here, \(R_m\) is a penalty parameter and \(\Omega(\tilde{g})\) quantifies the violation.
-  
-- **Explicit Procedures:**  
-  Use specific strategies (such as those proposed by Jimenez or Ray-Tang-Seow) to treat infeasible solutions differently.
-  
-- **Modified Domination Concepts:**  
-  Methods by Fonseca & Fleming or Deb et al. adjust the domination rule to incorporate constraint violations.
+- **Penalty Function Approach:**
+Modify each objective by adding a penalty term to account for constraint violations: $F_m = f_m + R_m \cdot \Omega(\tilde{g})$ Here, $R_m$ is a penalty parameter and $\Omega(\tilde{g})$ quantifies the violation.
 
-> **Insight:**  
-> These techniques help the algorithm to gradually steer the search toward the feasible region while still considering solutions that are close to feasibility.
-
-### Constrained Domination Principle
-
-A solution \( i \) is said to **constrained-dominate** another solution \( j \) if at least one of the following is true:
+Building on that concept for Constraints in MOEAs:
+- **Constrained Domination Principle:**  
+A solution $i$ is said to **constrained-dominate** another solution $j$ if at least one of the following is true:
 1. **Feasibility Advantage:**  
-   \( i \) is feasible while \( j \) is not.
+   $i$ is feasible while $j$ is not.
 2. **Less Constraint Violation:**  
-   Both are infeasible, but \( i \) has a smaller overall constraint violation.
+   Both are infeasible, but $i$ has a smaller overall constraint violation.
 3. **Standard Domination:**  
-   Both solutions are feasible and \( i \) dominates \( j \) in the usual Pareto sense.
+   Both solutions are feasible and $i$ dominates $j$ in the usual Pareto sense.
 
 > **Example:**  
 > In bridge design, if one design slightly exceeds a non-critical constraint while another severely violates a safety constraint, the former is preferred under the constrained domination principle.
-
----
-
-## 20. Constrained NSGA-II Simulation Results
-
-When NSGA-II is extended to handle constraints:
-- **Effective Constraint Management:**  
-  The algorithm can differentiate between feasible and infeasible solutions using the constrained domination principle.
-- **Maintaining Diversity:**  
-  Despite the additional complexity, the algorithm still produces a well-spread Pareto front.
-
-> **Observation:**  
-> Simulation graphs typically show clusters of solutions where the best feasible candidates are clearly identified, demonstrating that NSGA-II effectively manages both constraint satisfaction and diversity.
-
----
-
-## 21. Applications of MOEAs
-
-MOEAs have been applied to a wide array of challenging problems, such as:
-- **Spacecraft Trajectory Optimization:** Balancing fuel consumption, time, and safety.
-- **Engineering Component Design:** Optimizing trade-offs among cost, performance, and durability.
-- **Microwave Absorber Design:** Balancing efficiency with physical constraints.
-- **Ground-Water Monitoring:** Optimizing coverage versus cost.
-- **Extruder Screw Design:** Balancing manufacturing parameters.
-- **Airline Scheduling:** Managing cost, timing, and customer satisfaction.
-- **VLSI Circuit Design:** Optimizing power consumption, speed, and area.
-- **Other Complex Systems:** Numerous engineering and real-world applications where multiple conflicting objectives must be balanced.
-
-> **Practical Note:**  
-> The versatility of MOEAs makes them invaluable in scenarios where the best compromise among competing objectives must be found.
