Update 03. Evolutionary Algorithms.md

--- a/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
+++ b/notes/Evolutionary-computation/03. Evolutionary Algorithms.md
@@ -1,4 +1,4 @@
-# i) Evolutionary Algorithms
+# Evolutionary Algorithms
 <img src="https://www.baeldung.com/wp-content/uploads/sites/4/2021/08/EA-1024x469.png" alt="EA" width="400">
 
 ## 1. Evolution
