Update 01. Nature of Data.md

--- a/notes/Intelligent-data-analysis/01. Nature of Data.md
+++ b/notes/Intelligent-data-analysis/01. Nature of Data.md
@@ -18,6 +18,8 @@ Data comes in many forms—signals, images, videos, text, etc.—but from a math
 ## 2. Data as Points in Space
 
 ### 2.1 Sets and Elements
+<img src="https://i.ytimg.com/vi/pcedp8eB4UQ/maxresdefault.jpg" alt="Sets and elements" width="400">
+
 A **set** is a collection of distinct objects, called elements. Sets are fundamental because they form the basis for organizing data:
 
 - **Finite Sets**: Contain a limited number of elements (e.g., a set of colors: `{red, green, blue}`).
@@ -31,6 +33,8 @@ In data analysis, we can represent almost any type of data as a set:
 ---
 
 ### 2.2 Manipulating Sets
+<img src="https://mathmonks.com/wp-content/uploads/2024/05/Set-Operations.jpg" alt="Sets manipulation" width="400">
+
 Manipulating sets allows us to extract relationships and insights:
 - **Operations**: Include union, intersection, and difference. For example, combining datasets is a union, while finding common entries is an intersection.
 - **Relations**: Describe connections between elements. These are the "verbs" in mathematics:
@@ -40,6 +44,8 @@ Manipulating sets allows us to extract relationships and insights:
 ---
 
 ### 2.3 Cartesian Product
+<img src="https://i.ytimg.com/vi/l4j4XgVbuxc/hq720.jpg" alt="Cartesian Example" width="400">
+
 The Cartesian product combines sets into a single set of ordered pairs (or tuples):
 
 ```
@@ -51,8 +57,6 @@ A x B = {(1, x), (1, y), (2, x), (2, y)}
 - **Application**:
   - In multivariate data, a Cartesian product helps represent combinations of variables like height and weight.
   - In machine learning, feature spaces are often Cartesian products of multiple input dimensions.
-
-<img src="https://i.ytimg.com/vi/l4j4XgVbuxc/hq720.jpg" alt="Cartesian Example" width="400">
 
 ---
 
@@ -152,11 +156,11 @@ Intrinsic properties are built-in features of the data, independent of external 
 
 #### 4.2.2 Extrinsic Properties
 Extrinsic properties depend on **context or environment**:
-- **Differentiability**: Whether the data changes smoothly.
-- **Continuity**: Whether the data has gaps.
-- **Separability**: Whether you can distinguish groups in the data.
+- **Differentiability**: Can you take a derivative? Does the data change smoothly?
+- **Continuity**: Are there any gaps or jumps in the data?
+- **Separability**: Can you distinguish clear groups or clusters?
 
-While extrinsic properties seem tied to the data, their realization depends on external factors like:
+These properties can appear or disappear depending on things like:
 1. Measurement tools (e.g., sensor precision, noise).
 2. Sampling processes (e.g., missing observations).
 3. Context of analysis (e.g., resolution or algorithm choices).
