Update 02. Basis and Coordinate Systems.md

--- a/notes/Intelligent-data-analysis/02. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/02. Basis and Coordinate Systems.md
@@ -1,7 +1,5 @@
 # Nature of Data: Basis and Coordinate Systems
 
-[Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/09cf60e3-9370-4962-b1d2-c0a2c004eeae/audio)
-
 ---
 
 ## 1. Basis and Coordinate Systems
@@ -249,7 +247,7 @@ The line `y = 0.45536x + 1.7286` corresponds to the point `(1.7286, 0.45536)` in
 ---
 
 ### 2.2 Fourier Analysis
-<img src="https://static.tutorialandexample.com/scipy/scipy-discrete-fourier-transform1.png" alt="Fourier" width="400">
+<img src="https://miro.medium.com/v2/resize:fit:1400/1*e-_z80BnbHWyFTfRLblJ_w.gif" alt="Fourier" width="400">
 
 **Definition**  
 Fourier analysis decomposes a signal in the time domain `f(t)` into its component frequencies, expressed as:
