Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -2,8 +2,6 @@
 
 This lecture explores the mathematical and conceptual frameworks underlying point clouds, regression analysis, covariance, eigendecomposition, and Principal Component Analysis (PCA). These tools are foundational for dimensionality reduction, data visualization, and regression modeling.
 
-[Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/81fbcff8-0f23-4ed7-84f6-3ab9afa05fd4/audio)
-
 ---
 
 ## 1. Point Cloud and Euclidean Spaces
@@ -52,6 +50,8 @@ A **Euclidean space** (or Cartesian space) is a finite-dimensional metric vector
 ---
 
 ### 1.3 Visualization of Point Clouds
+
+<img src="https://d20khd7ddkh5ls.cloudfront.net/desmos-graph_20_14.png" alt="Point clouds" width="400">  
 
 Point clouds are often visualized in 2D or 3D using **scatterplots**, where each axis corresponds to a variable.
 
@@ -330,13 +330,14 @@ Where:
 ### 4.1 What is Eigendecomposition?
 An important tool in matrix algebra is **factorization**. Factorization is the process of decomposing a given matrix `A` into a product of other matrices. This technique underlies many applications in computational mathematics, including eigendecomposition.
 
-**Eigendecomposition** is a matrix factorization technique that expresses a matrix in terms of its eigenvalues and eigenvectors:
+**Eigendecomposition** is a matrix factorization technique that expresses a matrix in terms of its eigenvalues and eigenvectors. The eigendecomposition of a matrix `A` is given by:
 ```text
 A = QΛQ⁻¹
 ```
 Where:
-- `Λ`: A diagonal matrix containing the eigenvalues of `A`.
 - `Q`: A matrix where each column is an eigenvector of `A`.
+- `Λ` (Lambda): A diagonal matrix containing the eigenvalues of `A` on the diagonal.
+- `Q⁻¹`: The inverse of the matrix `Q`, assuming `Q` is invertible.
 
 <img src="https://www.mathsisfun.com/algebra/images/eigen-transform.svg" alt="Eigenvectors" width="400">  
 
@@ -383,49 +384,92 @@ A = [3  1]
 ```
 
 #### Step 1: Solve for Eigenvalues
-Find `λ` by solving:
+Compute  
 ```text
-det(A - λI) = 0
+det(A – λI)
+ = det([3−λ  1]
+       [ 0   2−λ])
+ = (3−λ)(2−λ) − 0·1
+ = λ² − 5λ + 6
 ```
-For the given matrix:
+
+Note that 
 ```text
-det([3-λ  1]
-    [ 0  2-λ]) = (3-λ)(2-λ) = λ² - 5λ + 6
+I = [1  0]
+    [0  1]
 ```
-The roots of this polynomial are:
+
+Next, Set equal to zero and factor:  
 ```text
-λ₁ = 2, λ₂ = 3
-```
+λ² − 5λ + 6 = 0
+(λ − 2)(λ − 3) = 0
+⇒ λ₁ = 2,  λ₂ = 3
+```  
 
 #### Step 2: Solve for Eigenvectors
-For `λ₁ = 2`:
+Solve $(A – λI)q = 0$ for each λ.
+
+**a) For λ₁ = 2**  
 ```text
-(A - 2I)q = 0
-```
-Leads to:
+A − 2I = [3−2  1]   = [1  1]
+         [ 0   2−2] = [0  0]
+```  
+Equation:  
 ```text
-q₁ = [1 -1]ᵀ
+1·x + 1·y = 0  ⇒  y = −x
+```  
+Choose x = 1 ⇒  
+```text
+q₁ = [1; −1]
 ```
 
-For `λ₂ = 3`:
+**b) For λ₂ = 3**  
 ```text
-(A - 3I)q = 0
-```
-Leads to:
+A − 3I = [3−3  1]   = [0  1]
+         [ 0   2−3] = [0 −1]
+```  
+Equation:  
 ```text
-q₂ = [1  0]ᵀ
-```
-
-#### Final Decomposition:
+1·y = 0  ⇒  y = 0
+```  
+x is free, choose x = 1 ⇒  
 ```text
-Q = [q₂ q₁] = [1  1]
-              [0 -1]
-
-Λ = [3  0]
-    [0  2]
+q₂ = [1; 0]
 ```
 
----
+#### Step 3: Form Q and Λ
+```text
+Q = [ q₂  q₁ ] = [ 1  1 ]
+                [ 0 −1 ]
+
+Λ = [ 3  0 ]
+    [ 0  2 ]
+```
+
+#### Step 4: Compute Q⁻¹
+
+<img src="https://mathsathome.com/wp-content/uploads/2024/01/Formula-for-the-inverse-of-a-2x2-matrix-1024x578.png" alt="Inverse of matrix" width="400">
+
+Here $a=1,b=1,c=0,d=-1$, so $\det Q = (1)(-1)-(1)(0)=-1$, and  
+```text
+Q⁻¹ = 1/(-1) · [ -1  -1 ]
+               [  0   1 ]
+     = [  1   1 ]
+       [  0  -1 ]
+```
+
+#### Step 5: Verify $A = Q\,Λ\,Q^{-1}$
+1. Compute $QΛ$:  
+   ```text
+   [  1   1 ]  [  3   0 ]  =  [  3   2 ] 
+   [  0  -1 ]  [  0   2 ]     [  0   -2 ] 
+      ```
+2. Then $(QΛ)\,Q⁻¹$:  
+   ```text
+   [ 3  2 ]  [ 1  1 ]  =  [ 3·1+2·0     3·1+2·(−1)    ]  =  [3  1]  = A
+   [ 0 -2 ]  [ 0 -1 ]     [ 0·1+(−2)·0  0·1+(−2)·(−1) ]     [0  2]
+   ```
+This confirms the eigendecomposition $A = Q\,Λ\,Q^{-1}$.
 
 ### 4.4 Key Remarks
 
@@ -444,7 +488,7 @@ Q = [q₂ q₁] = [1  1]
 ---
 
 
-## 5 Principal Component Analysis (PCA) and Classical Multidimensional Scaling (cMDS)
+## 5. Principal Component Analysis (PCA) and Classical Multidimensional Scaling (cMDS)
 <img src="https://numxl.com/wp-content/uploads/analisis-de-componentes-principales-acp-102-destacada.png" alt="PCA" width="400">
 
 ### 5.1 Overview
@@ -484,6 +528,7 @@ H = (1 / √(m - 1)) X'ᵀ
 Where:
 - `H`: Normalized version of the dataset.
 - `Cov(X') = HᵀH`.
+
 
 #### Step 3: Perform Eigendecomposition or SVD
 - Compute the eigenvalues and eigenvectors of the covariance matrix.
