Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -519,16 +519,11 @@ Where:
 #### Step 2: Compute the Covariance Matrix
 Calculate the covariance matrix of the centered data:
 ```text
-Cov(X') = X'(X')ᵀ / (m - 1)
+Cov(X') = X'(X')ᵀ / (n - 1)
 ```
-Alternatively, normalization may be included directly:
-```text
-H = (1 / √(m - 1)) X'ᵀ
-```
-Where:
-- `H`: Normalized version of the dataset.
-- `Cov(X') = HᵀH`.
+Where (X')ᵀ is the transpose.
 
+> The transpose of a matrix just means fliping rows and columns.
 
 #### Step 3: Perform Eigendecomposition or SVD
 - Compute the eigenvalues and eigenvectors of the covariance matrix.
