Update 04. Dimensional analysis by statistical independence.md

--- a/notes/Intelligent-data-analysis/04. Dimensional analysis by statistical independence.md
+++ b/notes/Intelligent-data-analysis/04. Dimensional analysis by statistical independence.md
@@ -1,7 +1,5 @@
 # Independent Component Analysis (ICA)
 
-[Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/2575ad3a-95db-4cda-a9b3-91430d9c3514/audio)
-
 ## 1. Problem Statement
 <img src="https://miro.medium.com/v2/resize:fit:1400/1*iSriZU7D4zikLtX0pGBqNA.png" alt="ICA" width="800">
 
@@ -175,6 +173,8 @@ Two variables are independent if:
 $$
 P(A \cap B) = P(A)P(B)
 $$
+> The probability that both A and B happen together is exactly the same as the product of the probability that A happens alone and the probability that B happens alone.
+> If knowing A happens doesn’t change the chances of B happening (and vice versa), they're independent.
 
 For random variables:    
 
@@ -195,11 +195,17 @@ $$
 H(X) = -\sum P(x_i)\log P(x_i)
 $$
 
-- **Joint Entropy**: Extends to multiple variables:
+> Entropy measures how unpredictable or uncertain a random variable is.
+> If all outcomes are equally likely, entropy is maximized.
+> If one outcome is very likely (and the others are almost impossible), entropy is low.
+
+**Joint Entropy**: Extends to multiple variables:
   
 $$
   H(X, Y) = -\sum_{x,y} P(x, y)\log P(x, y)
 $$
+
+> Joint entropy measures the uncertainty of two variables together.
 
 ### 4.2 Key Insights
 - Higher entropy means greater uncertainty.
@@ -217,13 +223,17 @@ Y = X\beta
 $$
 
 Where:
+- You observe $Y$ (mixed signals).
 - $X$: Independent sources (unknown).
 - $\beta$: Mixing matrix (unknown).
 
+>ICA decomposes observed high-dimensional data into statistically autonomous latent factors via a linear generative model, presuming non-observable source separation
+
+
 ### 5.2 Core Assumptions
-1. Components are **statistically independent**.
-2. Components have **non-Gaussian distributions**.
-3. Data is **mean-centered**.
+1. Components are **statistically independent**. = No mutual information between components.
+2. Components have **non-Gaussian distributions**. = Separation is mathematically impossible in gaussian sources because of the symmetry.
+3. Data is **mean-centered**. = Data $Y$ must be zero mean (you subtract the mean first).
 
 ### 5.3 Solving ICA
 - **Objective**: Maximize joint entropy to enforce independence.
@@ -234,16 +244,16 @@ W_{new} = W_{old} + h\nabla H
 $$
   
   Where $h$ is the learning rate.
+  and $\nabla H$ is gradient of entropy with respect to $W$
+
+#### Step-by-Step Summary:
+1. Start with the observed mixed data $Y$.
+2. Preprocess it: center it (mean = 0) and sometimes whiten it (normalize variances).
+3. Guess an initial mixing matrix $W$
+4. Iteratively update $W$ to maximize entropy (drive outputs toward independence).
+5. When updates stabilize, you have separated independent sources!
 
 ### 5.4 Practical Applications
 1. **Neuroimaging**: Separate EEG or fMRI signals.
 2. **Audio Processing**: Isolate voices in recordings.
 3. **Finance**: Identify independent market factors.
-
----
-
-## 6. Final Remarks
-
-- ICA solves the "cocktail party problem" by finding both the sources and the mixtures.
-- Results depend heavily on the algorithm used; always document your approach.
-- Basis in ICA maximizes independence, not orthogonality.
